Fix ScrollAnchor descent into absolute-positioned containers.

If the normal DOM walk yields nothing, examine the positioned descendants that
were skipped due to their DOM parents being offscreen.

BUG=692701

Review-Url: https://codereview.chromium.org/2741853006
Cr-Commit-Position: refs/heads/master@{#456575}

Former-commit-id: eeb280562292e14bdfc3dfa494f6599a1d43ae2b